Add tests for virUSBDeviceFind functions
Mock the /sys/bus/usb directory and test the finding
(and not finding) of some USB devices.

--- a/.gitignore
+++ b/.gitignore
@@ -219,6 +219,7 @@
 /tests/virsystemdtest
 /tests/virtimetest
 /tests/viruritest
+/tests/virusbtest
 /tests/vmwarevertest
 /tests/vmx2xmltest
 /tests/xencapstest
