spec: Fix braces around macros
In commit 72f7658ba24491672e6b81118f892400916e9404 I've added a few
macros with bad bracing. Although they work as expected fix them so that
we use uniform syntax.

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -99,7 +99,7 @@
 %else
     %define with_storage_sheepdog 0
 %endif
-%if 0%{?fedora} >= 19 || 0%{?rhel >= 6}
+%if 0%{?fedora} >= 19 || 0%{?rhel} >= 6
     %define with_storage_gluster 0%{!?_without_storage_gluster:%{server_drivers}}
 %else
     %define with_storage_gluster 0
@@ -157,7 +157,7 @@
 
 # libgfapi is built only on x86_64 on rhel
 %ifnarch x86_64
-    %if 0%{?rhel >= 6}
+    %if 0%{?rhel} >= 6
         %define with_storage_gluster 0
     %endif
 %endif
