daemon: Introduce max_anonymous_clients
https://bugzilla.redhat.com/show_bug.cgi?id=992980

This config tunable allows users to determine the maximum number of
accepted but yet not authenticated users.

Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/daemon/libvirtd.conf
+++ b/daemon/libvirtd.conf
@@ -255,7 +255,7 @@
 
 # The maximum number of concurrent client connections to allow
 # over all sockets combined.
-#max_clients = 20
+#max_clients = 5000
 
 # The maximum length of queue of connections waiting to be
 # accepted by the daemon. Note, that some protocols supporting
@@ -263,6 +263,10 @@
 # connection succeeds.
 #max_queued_clients = 1000
 
+# The maximum length of queue of accepted but not yet not
+# authenticated clients. The default value is zero, meaning
+# the feature is disabled.
+#max_anonymous_clients = 20
 
 # The minimum limit sets the number of workers to start up
 # initially. If the number of active clients exceeds this,
