Wildcard ignore tests/*test instead of listing every one
There is a forever growing list of test cases. It is just
not worth listing each one individually when a wildcard
can do the job.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -145,85 +145,16 @@
 /tests/*.log
 /tests/*.pid
 /tests/*.trs
-/tests/*xml2*test
 /tests/commandhelper
-/tests/commandtest
-/tests/conftest
-/tests/cputest
-/tests/domainconftest
-/tests/domainsnapshotxml2xmltest
-/tests/esxutilstest
-/tests/eventtest
-/tests/fchosttest
-/tests/fdstreamtest
-/tests/hashtest
-/tests/jsontest
-/tests/libvirtdconftest
-/tests/lxcconf2xmltest
-/tests/metadatatest
-/tests/networkxml2argvtest
-/tests/nodeinfotest
-/tests/nwfilterxml2xmltest
-/tests/objecteventtest
+/tests/*test
+!/tests/*schematest
+!/tests/virt-aa-helper-test
 /tests/object-locking
 /tests/object-locking-files.txt
 /tests/object-locking.cm[ix]
-/tests/openvzutilstest
-/tests/qemuagenttest
-/tests/qemuargv2xmltest
-/tests/qemucapabilitiestest
-/tests/qemuhelptest
-/tests/qemuhotplugtest
-/tests/qemumonitorjsontest
-/tests/qemumonitortest
-/tests/qemuxmlnstest
-/tests/qparamtest
 /tests/reconnect
-/tests/secaatest
-/tests/seclabeltest
-/tests/securityselinuxlabeltest
-/tests/securityselinuxtest
-/tests/sexpr2xmltest
-/tests/shunloadtest
-/tests/sockettest
 /tests/ssh
-/tests/statstest
-/tests/storagebackendsheepdogtest
-/tests/sysinfotest
 /tests/test_conf
-/tests/utiltest
-/tests/viratomictest
-/tests/virauthconfigtest
-/tests/virbitmaptest
-/tests/virbuftest
-/tests/vircapstest
-/tests/vircgrouptest
-/tests/virdbustest
-/tests/virdrivermoduletest
-/tests/virendiantest
-/tests/virfiletest
-/tests/virhashtest
-/tests/viridentitytest
-/tests/virkeycodetest
-/tests/virkeyfiletest
-/tests/virkmodtest
-/tests/virlockspacetest
-/tests/virlogtest
-/tests/virnet*test
-/tests/virpcitest
-/tests/virportallocatortest
-/tests/virscsitest
-/tests/virshtest
-/tests/virstoragetest
-/tests/virstringtest
-/tests/virsystemdtest
-/tests/virtimetest
-/tests/viruritest
-/tests/virusbtest
-/tests/vmwarevertest
-/tests/vmx2xmltest
-/tests/xencapstest
-/tests/xmconfigtest
 /tools/*.[18]
 /tools/libvirt-guests.init
 /tools/libvirt-guests.service
