Introduce a new set of helper macros for mocking symbols
Introduce virmock.h which provides some macros to assist in
creation of LD_PRELOAD overrides. When these are used, the
LD_PRELOAD code simply has some stubs which forward to a
wrapper function inside the main test case. This means that
logic for the test no longer has to be split between the
virXXXtest.c and virXXXmock.c files. It will also make it
possible to provide some common reusable modules for mocking
code like DBus.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -129,7 +129,8 @@ EXTRA_DIST =		\
 	xml2sexprdata \
 	xml2vmxdata \
 	vmwareverdata \
-	.valgrind.supp
+	.valgrind.supp \
+	virmock.h
 
 test_helpers = commandhelper ssh test_conf
 test_programs = virshtest sockettest \
